Fix aspect ratio and make configuration panel collapsable

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@
   /* height: 100vh; */
   /* padding: 0; */
   /* flex: 1; */
+  width: 100vw;
   height: 100vh;
 
   font-weight: normal;
